# JobSearchAgent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  demo.py  mcp_server.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/agents/: state.py
app/agents/graphs/: daily_search_graph.py  job_search_graph.py
app/agents/nodes/: cover_letter.py  draft_outreach.py  enrich_jobs.py  filter_and_score.py  find_contacts.py  parse_query.py  parse_resume.py  search_jobs.py  suggest_resume_tweaks.py  summarize.py
app/application/dto/: schemas.py
app/application/use_cases/: daily_search.py  search_jobs.py
app/domain/entities/: __init__.py  application.py  candidate.py  job.py  outreach.py  resume_suggestion.py  search_criteria.py
app/domain/ports/: __init__.py  job_enricher.py  job_source.py  llm.py  people_finder.py  repositories.py
app/domain/services/: matching.py
app/infrastructure/config/: settings.py
app/infrastructure/email/: digest.py  smtp.py
app/infrastructure/llm/: langchain_llm.py
app/infrastructure/people/: apollo_source.py
app/infrastructure/resume/: parser.py
app/infrastructure/scheduler/: daily_run.py
app/infrastructure/scrapers/: README.md  jsearch_source.py  mock_source.py
app/infrastructure/storage/: run_store.py
app/interfaces/api/: dependencies.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: JobCard.jsx  Nav.jsx  (+1 more)
tests/integration/: test_graph.py
tests/unit/: test_matching.py
(+10 files in other folders)
